--- a/Web/To Do List/index.html
+++ b/Web/To Do List/index.html
@@ -8,5 +8,18 @@
     <link rel="stylesheet" href="main.css" />
     <script src="main.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div id="myDIV" class="header">
+      <h2>My To Do List</h2>
+      <input type="text" id="myInput" placeholder="Title..." />
+      <span onclick="newElement()" class="addBtn"></span>
+    </div>
+
+    <ul>
+      <li>Hit the gym</li>
+      <li class="checked">Pay bills</li>
+      <li>Meet George</li>
+      <li>Buy eggs</li>
+    </ul>
+  </body>
 </html>
