--- a/Web/To Do List/index.html
+++ b/Web/To Do List/index.html
@@ -15,7 +15,7 @@
       <span onclick="newElement()" class="addBtn">Add</span>
     </div>
 
-    <ul>
+    <ul id="myUL">
       <li>Hit the gym</li>
       <li class="checked">Pay bills</li>
       <li>Meet George</li>
