--- a/Web/To Do List/index.html
+++ b/Web/To Do List/index.html
@@ -8,14 +8,16 @@
     <link rel="stylesheet" href="dist/output.css" />
     <script src="main.js" defer></script>
   </head>
-  <body>
-    <div id="myDIV" class="header">
-      <h2>My To Do List</h2>
-      <input type="text" id="myInput" placeholder="Title..." />
-      <span onclick="newElement()" class="addBtn">Add</span>
+  <body class="grid place-content-center mt-10">
+    <div id="myDIV" class="text-center bg-red-600 p-10">
+      <h1 class="text-4xl pb-5 font-bold text-white">My To Do List</h1>
+      <div class="flex items-center">
+        <input type="text" id="myInput" placeholder="Title..." class="w-96 h-10 text-2xl" />
+        <span onclick="newElement()" class="addBtn text-xl bg-slate-500 hover:bg-slate-400 text-white p-2">Add</span>
+      </div>
     </div>
 
-    <ul id="myUL">
+    <ul id="myUL" class="text-center odd:bg-gray-500">
       <li>Hit the gym</li>
       <li class="checked">Pay bills</li>
       <li>Meet George</li>
