fix tailwind to do list

--- a/Web/To Do List/index.html
+++ b/Web/To Do List/index.html
@@ -17,7 +17,7 @@
       </div>
     </div>
 
-    <ul id="myUL" class="text-center odd:bg-gray-500">
+    <ul id="myUL" class="odd:bg-gray-500">
       <li>Hit the gym</li>
       <li class="checked">Pay bills</li>
       <li>Meet George</li>
